@@ -1,12 +1,12 @@
 package Pathfinders;
 
-import java.util.*;
-import java.util.List;
-import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
-
-import Application.*;
+import Application.App;
+import Application.Block;
 import Utilities.Utils;
+
+import java.util.*;
+import java.util.concurrent.ThreadLocalRandom;
+import java.util.stream.Collectors;
 
 /**
  * Pathfinders.Pathfinder abstract class
@@ -17,7 +17,6 @@ public abstract class Pathfinder implements Runnable {
     /**
      * CONSTANTS
      **/
-    public static final int DELAY = 1;
 
     public static final List<List<Integer>> DISPLACEMENT_MATRIX_1 = List.of(
             List.of(-1, 0),
@@ -44,14 +43,7 @@ public abstract class Pathfinder implements Runnable {
             List.of(0, 2)
     );
 
-    public int getVariableDelay() {
-        return variableDelay;
-    }
 
-    public void setVariableDelay(int variableDelay) {
-        this.variableDelay = variableDelay;
-    }
-    private int variableDelay;
     /**
      * INSTANCE VARIABLES
      **/
@@ -95,7 +87,9 @@ public abstract class Pathfinder implements Runnable {
         this.blocksList = blocksList;
     }
 
-    public List<List<Block>> getBlocks() {return blocksList;}
+    public List<List<Block>> getBlocks() {
+        return blocksList;
+    }
 
     public Block getStart() {
         return start;
@@ -105,12 +99,12 @@ public abstract class Pathfinder implements Runnable {
         this.start = start;
     }
 
-    public void setEnd(Block end) {
-        this.end = end;
-    }
-
     public Block getEnd() {
         return end;
+    }
+
+    public void setEnd(Block end) {
+        this.end = end;
     }
 
     public boolean canMoveDiagonally() {
@@ -136,7 +130,7 @@ public abstract class Pathfinder implements Runnable {
     }
 
     private boolean isValidNeighbour(int row, int column) {
-        return ((row >= 0 && row < getBlocks().size()) && (column >= 0 && column < getBlocks().get(0).size()));
+        return ((row >= 0 && row < getBlocks().size()) && (column >= 0 && column < getBlocks().getFirst().size()));
     }
 
     public boolean[][] initializeVisited() {
@@ -146,17 +140,13 @@ public abstract class Pathfinder implements Runnable {
         return array;
     }
 
-    private void allBlocksAreWalls () {
-//        blocksList.stream()
-//                .flatMap(Collection::stream)
-//                .forEach(Block::makeWall);
-//
+    private void allBlocksAreWalls() {
         for (List<Block> row : blocksList) {
             for (Block block : row) {
                 block.makeWall();
-
             }
         }
+        System.out.println("All blocks are walls");
         System.out.println(Thread.currentThread());
     }
 
@@ -174,7 +164,7 @@ public abstract class Pathfinder implements Runnable {
             int pathColumn = (vector.get(1) / 2) + column;
             if (isValidNeighbour(tempRow, tempColumn)) {
                 neighbours.put(this.getBlocks().get(tempRow).get(tempColumn)
-                        ,this.getBlocks().get(pathRow).get(pathColumn)
+                        , this.getBlocks().get(pathRow).get(pathColumn)
                 );
             }
         }
@@ -184,47 +174,60 @@ public abstract class Pathfinder implements Runnable {
     public void createDFSMaze() {
         allBlocksAreWalls();
 
-        int sizeX = blocksList.get(0).size();
+        int sizeX = blocksList.getFirst().size();
         int sizeY = blocksList.size();
         boolean[][] visited = initializeVisited();
 
         Stack<Block> stack = new Stack<>();
-        int randomX = (int) (Math.random() * sizeY);
-        int randomY = (int) (Math.random() * sizeX);
-        stack.push(blocksList.get(randomX).get(randomY));
-        while (!stack.isEmpty()) {
-            Block current = stack.pop();
+        int randomRow = ThreadLocalRandom.current().nextInt(sizeY);
+        int randomCol = ThreadLocalRandom.current().nextInt(sizeX);
+        Block startBlock = blocksList.get(randomRow).get(randomCol);
 
-            HashMap<Block, Block> neighboursAndPaths = (HashMap<Block, Block>) getMazeNeighbours(current).entrySet().stream()
-                    .filter(map -> !visited[map.getKey().getRow()][map.getKey().getColumn()])
-                    .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
+        startBlock.makeWalkable();
+        visited[randomRow][randomCol] = true;
+        stack.push(startBlock);
+
+        while (!stack.isEmpty()) {
+
+            Block current = stack.peek();
+
+            Map<Block, Block> neighboursAndPaths =
+                    getMazeNeighbours(current).entrySet().stream()
+                            .filter(e -> !visited[e.getKey().getRow()][e.getKey().getColumn()])
+                            .collect(Collectors.toMap(
+                                    Map.Entry::getKey,
+                                    Map.Entry::getValue,
+                                    (a, _) -> a,
+                                    HashMap::new
+                            ));
 
             if (!neighboursAndPaths.isEmpty()) {
-                int randomIndex = new Random().nextInt(neighboursAndPaths.size());
                 List<Block> neighbours = new ArrayList<>(neighboursAndPaths.keySet());
-                Block randNeighbour = neighbours.get(randomIndex);
-                neighboursAndPaths.forEach((neighbour, path) -> {
-                    neighbour.makePath();
-                    visited[neighbour.getRow()][neighbour.getColumn()] = true;
+                Block randNeighbour = neighbours.get(ThreadLocalRandom.current().nextInt(neighbours.size()));
+                Block path = neighboursAndPaths.get(randNeighbour);
 
-                    path.makePath();
-                    visited[path.getRow()][path.getColumn()] = true;
-                    if (!neighbour.equals(randNeighbour)) stack.push(neighbour);
-                });
+                randNeighbour.makeWalkable();
+                visited[randNeighbour.getRow()][randNeighbour.getColumn()] = true;
+
+                path.makeWalkable();
+                visited[path.getRow()][path.getColumn()] = true;
+
                 stack.push(randNeighbour);
+            } else {
+                stack.pop();
             }
         }
-
     }
+
 
     public void createPrimsMaze() {
         Random random = new Random();
         allBlocksAreWalls();
         int randRow = new Random().nextInt(blocksList.size());
-        int randCol = new Random().nextInt(blocksList.get(0).size());
+        int randCol = new Random().nextInt(blocksList.getFirst().size());
         Block first = blocksList.get(randRow).get(randCol);
 
-        first.makePath();
+        first.makeWalked();
         HashMap<Block, Block> frontierMap = (HashMap<Block, Block>) getMazeNeighbours(first).entrySet().stream()
                 .filter(map -> !map.getKey().isWalkable())
                 .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
@@ -243,8 +246,8 @@ public abstract class Pathfinder implements Runnable {
             if (!neighbours.isEmpty()) {
                 int randIndex2 = random.nextInt(neighbours.size());
                 Block randNeighbour = (Block) neighbours.keySet().toArray()[randIndex2];
-                neighbours.get(randNeighbour).makePath();
-                randBlock.makePath();
+                neighbours.get(randNeighbour).makeWalkable();
+                randBlock.makeWalkable();
                 HashMap<Block, Block> newFrontierBlocks = (HashMap<Block, Block>) getMazeNeighbours(randBlock).entrySet().stream()
                         .filter(map -> !map.getKey().isWalkable())
                         .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
@@ -253,7 +256,6 @@ public abstract class Pathfinder implements Runnable {
             frontierMap.remove(randBlock);
         }
     }
-
 
     @Override
     public void run() {
